# SLiM-CZ-V1

./: LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cfg/: README.md  default.yaml  large.yaml  medium.yaml  slim_cz_v1_default.yaml  slim_cz_v1_medium.yaml  slim_cz_v1_tiny.yaml  small.yaml  tiny.yaml
slim_cz_v1/: __init__.py  dataloader.py  inference.py  model.py  recommend_config.py  train.py
slim_cz_v1/cli/: __init__.py  extract_text.py  inference.py  tokenize_parallel.py  train.py  train_tokenizer.py
slim_cz_v1/inference/: __init__.py  inference.py
slim_cz_v1/preprocessing/: __init__.py  base.py  pipeline.py
slim_cz_v1/preprocessing/extractors/: __init__.py  epub.py  pdf.py  txt.py
slim_cz_v1/preprocessing/processors/: __init__.py  anonymization.py  cleaning.py  encoding.py
slim_cz_v1/tokenization/: __init__.py  bpe.py  parallel_tokenizer.py  statistics.py  vocabulary.py
slim_cz_v1/training/: __init__.py  train.py
slim_cz_v1/utils/: __init__.py  output.py
src/: dataloader.py  diagnose.py  inference.py  model.py  prepare_data.py  recommend_config.py  train.py
