[project]
name = "slim-cz-v1"
version = "0.1.0"
description = "Slavic Linguistic integrated Micro-model for Czechia"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Filip Sedivy", email = "me@filipsedivy.com" }
]
license = { text = "MIT" }
keywords = [
    "nlp",
    "language-model",
    "transformer",
    "czech",
    "machine-learning",
    "deep-learning",
    "sentencepiece",
    "bpe-tokenizer"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]

# Core dependencies
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0.0",
    "sentencepiece>=0.1.99",
    "pymupdf>=1.23.0",
    "chardet>=5.0.0",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

tokenizer = [
    "tokenizers>=0.13.0",
]

monitoring = [
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
]

analysis = [
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
]

all = [
    "slim-cz-v1[tokenizer,monitoring,analysis,dev]"
]

# CLI entry points
[project.scripts]
slim-extract-text = "slim_cz_v1.cli.extract_text:main"
slim-train-tokenizer = "slim_cz_v1.cli.train_tokenizer:main"
slim-train = "slim_cz_v1.train:main"
slim-inference = "slim_cz_v1.inference:main"
slim-recommend = "slim_cz_v1.recommend_config:main"
slim-diagnose = "slim_cz_v1.diagnose:main"

[project.urls]
Homepage = "https://github.com/filipsedivy/SLiM-CZ-V1"
Repository = "https://github.com/filipsedivy/SLiM-CZ-V1"
Issues = "https://github.com/filipsedivy/SLiM-CZ-V1/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slim_cz_v1"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"